# email_sender

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: fill_db.py  send.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blog_created_date_alter_mailing_status.py
mailing/templates/mailing/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  feedback_form.html  feedback_list.html  index.html  logsending_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
mailing/templatetags/: media.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  send_mail.py
users/migrations/: 0001_initial.py  0002_user_verification_code.py
users/templates/users/: country_confirm_delete.html  country_detail.html  country_form.html  country_list.html  login.html  register.html  user_form.html  verification.html
